# goit-python-web-hw14

./: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  run_app.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: cb908fcf4669_hw14.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html  reset_password_email.html
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
