[tool.poetry]
name = "goit-python-web-hw14"
version = "0.1.0"
description = "REST API application for storing and managing contacts"
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.7.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.6"
pydantic-settings = "^2.2.1"
cloudinary = "^1.40.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
